--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "labrute-sla-parser",
+  "name": "labrute-fla-parser",
   "version": "1.0.0",
   "description": "",
   "main": "dist/Symbols.js",
